Fixing first-section small height

--- a/frontend/src/stylesheets/layout/_first.scss
+++ b/frontend/src/stylesheets/layout/_first.scss
@@ -6,16 +6,16 @@
   overflow: hidden;
 
   &__inner {
-  pointer-events: none;
-  position: relative;
-  z-index: 2;
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-areas:
-    'contacts'
-    'content'
-    'arrow-to-down';
+    pointer-events: none;
+    position: relative;
+    z-index: 2;
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      'contacts'
+      'content'
+      'arrow-to-down';
   }
 
   &__contacts {
@@ -31,23 +31,23 @@
     padding-bottom: 13rem;
     align-self: center;
   }
-  
+
   &__site-logo {
     width: 160rem;
     margin: 0 auto;
   }
-  
+
   &__banner {
     padding-top: 22rem;
     padding-bottom: 20rem;
   }
-  
+
   &__heading {
     font-size: 1.2em;
     font-weight: bold;
     margin: 0 auto;
   }
-  
+
   &__events {
     padding-top: 4rem;
     font-size: 0.7em;
@@ -55,7 +55,7 @@
     font-weight: 300;
     text-transform: uppercase;
   }
-  
+
   &__crosshairs-icon {
     color: var(--red-clr);
   }
@@ -67,40 +67,43 @@
     margin: 0 auto;
   }
 
-
   /* Height breakpoints */
   @media (max-height: v-get(first-height-breakpoint)) {
     &__content {
-      padding-top: 30px;
+      padding-top: 30rem;
     }
 
     &__site-logo {
-      width: 115px;
+      width: 115rem;
     }
 
     &__arrow-to-down {
-      padding-bottom: 12px;
+      padding-bottom: 12rem;
     }
   }
   @media (max-height: v-get(second-height-breakpoint)) {
-    // .contacts {
-    //   margin-top: 5px;
-    //   font-size: 0.8px;
-    // }
-    // .contacts__tel {
-    //   margin-top: 2px;
-    //   font-size: 18rem;
-    // }
-    // .first__content {
-    //   padding-top: 14px;
-    // }
-    // .first__logo {
-    //   width: 75px;
-    // }
-    // .first__banner {
-    //   margin-top: 10px;
-    //   margin-bottom: 10px;
-    // }
+    // TODO: move from here
+    .contacts {
+      padding-top: 5rem;
+      font-size: 0.8em;
+    }
+
+    .reservation-btn {
+      font-size: 0.8em;
+    }
+
+    &__content {
+      padding-top: 14rem;
+    }
+
+    &__site-logo {
+      width: 75rem;
+    }
+
+    &__banner {
+      padding-top: 10rem;
+      padding-bottom: 10rem;
+    }
   }
 
   /* Adaptive font-size */
@@ -109,24 +112,24 @@
       &__heading {
         font-size: 6.2vw;
       }
-      
+
       &__events {
         font-size: 3.6vw;
       }
     }
   }
-  
+
   /* Width breakpoints */
   @include respond-above(xs) {
     @media screen and (min-height: v-get(xs-height-breakpoint)) {
       &__site-logo {
         width: 210rem;
       }
-  
+
       &__heading {
         font-size: 36rem;
       }
-  
+
       &__events {
         font-size: 18rem;
         letter-spacing: 0.6rem;
